# fits_utilities

./: .travis.yml  MANIFEST  README.md  hselect.py  imhead.py  requirements.txt  setup.cfg  setup.py  test_code.py
.github/workflows/: pythonpackage.yml
docs/: Makefile  conf.py  index.rst  utils.rst
fits_utilities/: __init__.py  imhead.py  showfits.py  update_keywords.py  upload_files_to_zenodo.py  version.py
tests/: test_imports.py
utils/: __init__.py  hselect.py  imhead.py  showfits.py
