[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_sphinx]
project = 'Fits Utilities'
source-dir = docs
build-dir = docs/_build

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = fits_utilities
description = Tools for visualizing fits files.
long_description = Several tools for visualizing files
author = Simon Torres
author_email = storres@ctio.noao.edu
license = BSD-3-Clause
# url =
edit_on_github = False
github_project = simontorres/fits_utilities
install_requires =
    numpy
    pandas
    matplotlib
    scipy
    cython
    astropy
    ccdproc
    astroplan
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.1.1
